--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navbar bg-dark ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
-          <img class="carrito" src="./img/Gatito Buseador Peces.png" alt="" >
+          <img class="carrito" src="./img/claqueta.png" alt="" >
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -26,7 +26,7 @@
             </div>
             <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 400px; height: 100%;">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                  <img src="./img/Gatito Buseador Peces.png" alt="mdo" width="60" height="70" >
+                  <img src="./img/claqueta.png" alt="mdo" width="60" height="70" >
                   <span class="fs-4">Barra de interaccion</span>
                 </a>
                 <hr>
@@ -80,19 +80,7 @@
                       Creadores
                     </a>
                   </li>
-                  <li>
-                    <a href="#" class="nav-link text-white">
-                      <img src="./img/calender-dynamic-color.png" alt="mdo" width="24" height="24" class="rounded-circle">
-                      Orders
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="nav-link text-white">
-                      <img src="./img/pin-dynamic-color.png" alt="mdo" width="24" height="24" class="rounded-circle">
-                      Customers
-                    </a>
-                  </li>
-                  <br><br><br><br><br><br><br><br><br>
+                  <br><br><br><br><br><br><br><br><br><br><br><br><br>
                   <hr>
                   <div class="dropup">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -228,7 +216,7 @@
             <p class="col-md-4 mb-0 text-muted">&copy; 2022 Company, Inc</p>
         
             <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-              <img src="./img/logo.png" alt="mdo" width="60" height="70" >
+              <img src="./img/claqueta.png" alt="mdo" width="60" height="70" >
             </a>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
