--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="card card2 col-xs-6 col-sm-6 col-md-6 col-lg-4" style="width: 300px; height: 500px;">
               <div class="content">
                 <h2>Creed 3</h2>
-                <a class="Option" href="">Ver Detalles</a>
+                <a class="Option" href="./peliculas.html">Ver Detalles</a>
               </div>
             </div>
           </li>
